[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phaselock_gui"
version = "0.9"
authors = [
  { name="Steven Zeltmann", email="steven.zeltmann@cornell.edu" },
]
description = "Interactive phase lock-in analysis of atomic resolution images."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "py4dstem >= 0.14.0",
  "numpy >= 1.19",
  "matplotlib >= 3.2.2",
  "PyQt5 >= 5.10",
  "pyqtgraph >= 0.11",
]

[project.scripts]
phaselock = "phaselock_gui.runGUI:launch"

[project.urls]
"Homepage" = "https://github.com/py4dstem/py4D-browser"
"Bug Tracker" = "https://github.com/py4dstem/py4D-browser/issues"